tests/baselines/reference/implementPublicPropertyAsPrivate.errors.txt
implementPublicPropertyAsPrivate.ts(4,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Property 'x' is private in type 'C' but not in type 'I'.


==== implementPublicPropertyAsPrivate.ts (1 errors) ====
    interface I {
        x: number;
    }
    class C implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'x' is private in type 'C' but not in type 'I'.
        private x = 0; // should raise error at class decl
    }